--- a/main.html
+++ b/main.html
@@ -11,8 +11,11 @@
 	</script>
 	<script src="js/facts.js">
 	</script>
+	<script src="js/lib/html2canvas.js">
+	</script>
 	<button onclick="loadDoc(jsonsLocal.jsonNutFacts,jsonsLocal.jsonNutNames)">Nutrition</button>
 	<button onclick="loadDoc(jsonsLocal.jsonNutFactsSimp, jsonsLocal.jsonNutNamesSimp)">test</button>
+	<button onclick="alert('Hello')">capture</button>
 
 	<div id="lst">
 		<ul id = "lstBlank">
